--- a/meta-analysis.Rmd
+++ b/meta-analysis.Rmd
@@ -57,5 +57,43 @@ relevant_articles %>%
 relevant_articles %>% 
   count(domain) %>% 
   print(n = 90)
+
+# See the range of publication years
+relevant_articles %>% 
+  summarize(oldest_paper = min(year),
+            newest_paper = max(year))
+
+write_csv(relevant_articles, "1st_round_coding.csv")
+```
+
+```{r}
+# Import spreadsheet of articles from ICA 2023 meta-analysis
+old_articles <- read_csv("2nd_round_coding_2023_ICA.csv") %>% 
+  rename("title" = "Article name")
+
+# See how many unique entries I added. 
+# Double-check for accuracy. ID-1444 had an incomplete title, so that needs to be fixed so it is properly removed from new_articles.
+new_articles <- anti_join(relevant_articles, old_articles, by = "title") %>% filter(ID != "ID-1444")
+
+# Recode methods and domains in new list
+new_articles_recoded <- new_articles %>% 
+  mutate(Method = case_when(`Method: (1) quantitative, (2) qualitative, (3) meta analysis, reviews` == "1" ~ "Quantitative",
+                                    `Method: (1) quantitative, (2) qualitative, (3) meta analysis, reviews` == "2" ~ "Qualitative",
+                                    `Method: (1) quantitative, (2) qualitative, (3) meta analysis, reviews` == "3" ~ "Review",
+                                    `Method: (1) quantitative, (2) qualitative, (3) meta analysis, reviews` %in% c("1, 2", NA) ~ "Other")) %>% 
+  relocate(Method, .after = `Method: (1) quantitative, (2) qualitative, (3) meta analysis, reviews`)
+
+# Check domains from old list
+old_articles %>% 
+  count(Field)
+
+# Check domains from new list
+new_articles_recoded %>% 
+  count(domain) %>% 
+  print(n = 82)
+
+
+
+
 ```
 
