--- a/meta-analysis.Rmd
+++ b/meta-analysis.Rmd
@@ -69,7 +69,8 @@ write_csv(relevant_articles, "1st_round_coding.csv")
 ```{r}
 # Import spreadsheet of articles from ICA 2023 meta-analysis
 old_articles <- read_csv("2nd_round_coding_2023_ICA.csv") %>% 
-  rename("title" = "Article name")
+  rename("title" = "Article name",
+         "domain" = "Task Domain")
 
 # See how many unique entries I added. 
 # Double-check for accuracy. ID-1444 had an incomplete title, so that needs to be fixed so it is properly removed from new_articles.
@@ -82,7 +83,8 @@ new_articles_recoded <- new_articles %>%
                                     `Method: (1) quantitative, (2) qualitative, (3) meta analysis, reviews` == "2" ~ "Qualitative",
                                     `Method: (1) quantitative, (2) qualitative, (3) meta analysis, reviews` == "3" ~ "Review",
                                     `Method: (1) quantitative, (2) qualitative, (3) meta analysis, reviews` %in% c("1, 2", NA) ~ "Other")) %>% 
-  relocate(Method, .after = `Method: (1) quantitative, (2) qualitative, (3) meta analysis, reviews`)
+  relocate(Method, .after = `Method: (1) quantitative, (2) qualitative, (3) meta analysis, reviews`) %>% 
+  mutate(first_author = if_else(str_detect(author, "and") == TRUE, str_extract(author, "(\\S+)\\s+and"), author))
 
 # Check domains from old list
 old_articles %>% 
@@ -97,8 +99,11 @@ new_articles_recoded %>%
   count(domain) %>% 
   print(n = 82)
 
+```
 
+```{r}
+# Join old and new list
 
-
+bind_rows(old_articles, new_articles_recoded)
 ```
 
