--- a/meta-analysis.Rmd
+++ b/meta-analysis.Rmd
@@ -123,7 +123,7 @@ merged_list_cleaned <- merged_list %>%
 
 
 # Export for use in Google Sheets
-write_csv(merged_list_cleaned, "merged_list_8.19.24.csv")
+write_csv(merged_list_cleaned, "update_on_2023_ICA_2nd_round_coding.csv")
 
 ```
 
@@ -139,6 +139,15 @@ ICA_1st_round_coding <- read_csv("2023_1st_round_coding.csv") %>%
   mutate(title = str_to_title(title),
          Year = as.double(Year))
 
+# Multiple rows could refer to the same paper because each study is given its own row. Check to see how many *papers* there are
+ICA_1st_round_coding %>% 
+  distinct(title)
+
+# There are 224 papers.
+```
+
+
+```{r}
 # See how many unique entries I added. Rename columns so they correctly bind with old list.
 unique_new_based_on_ICA_1st_round <- anti_join(relevant_articles, ICA_1st_round_coding, by = "title") 
 
@@ -153,15 +162,31 @@ unique_new_recoded <- unique_new_based_on_ICA_1st_round %>%
   mutate(Statistics = case_when(Statistics == "1" ~ "Yes",
                                 Statistics == "2" ~ "No")) %>% 
   relocate(Method, .after = `Method: (1) quantitative, (2) qualitative, (3) meta analysis, reviews`) %>% 
-  mutate(first_author_last_name = if_else(str_detect(author, "and") == TRUE, str_extract(author, "\\b(\\w+)\\b(?=\\s+and\\b)"), str_extract(author, "\\b([\\w-]+)\\b(?=[^\\w-]*$)"))) 
+  mutate(first_author_last_name = if_else(str_detect(author, "and") == TRUE, str_extract(author, "\\b(\\w+)\\b(?=\\s+and\\b)"), str_extract(author, "\\b([\\w-]+)\\b(?=[^\\w-]*$)"))) %>% 
+  mutate(title = str_to_title(title))
 
-# I added 185 unique articles
+# I added 185 unique articles. Export and get pdfs
+write_csv(unique_new_recoded, "algorithm_aversion_papers_8.20.24.csv")
+```
 
+
+```{r}
 # Join ICA 1st round coding + unique entries to create '2024 + 2023 first round of coding'
 # Delete unnecessary columns
 
 merged_based_on_ICA_1st_round <- bind_rows(ICA_1st_round_coding, unique_new_recoded) %>% 
     select(-c(author, `Method: (1) quantitative, (2) qualitative, (3) meta analysis, reviews`, `Inclusion: (1) Yes (2) No, not English, (3) No, not focused on AI vs. human, (4) No, other reasons`))
 
+
+# Distribution of publication years
+merged_based_on_ICA_1st_round %>% 
+  filter(Year > 2014) %>% 
+  ggplot(aes(x = Year)) +
+  geom_histogram(bins = 7)
+
+# Export
+write_csv(merged_based_on_ICA_1st_round, "2024_+_2023_1st_round_coding.csv")
+
+# 185 new + 224 old = 409
 ```
 
