--- a/meta-analysis.Rmd
+++ b/meta-analysis.Rmd
@@ -378,3 +378,11 @@ coded_table %>%
   kable_paper("striped")
 ```
 
+```{r}
+# Fields 
+coded_table %>% 
+  count(journal_field) %>% 
+  arrange(desc(n)) %>% 
+  print(n=34)
+```
+
