--- a/meta-analysis.Rmd
+++ b/meta-analysis.Rmd
@@ -366,13 +366,14 @@ ggplot(coded_table_classes, aes(x=task_objectivity, y=Type_of_human_manipulated,
 ```{r}
 # Remake table
 coded_table %>% 
-  select(first_author_last_name, title, Year, Journal, journal_field, Method, N, task_objectivity, Type_of_human_manipulated, Algorithm_orientations) %>% 
+  select(first_author_last_name, title, Year, Journal, journal_field, Method, theory_framework, N, task_objectivity, Type_of_human_manipulated, Algorithm_orientations) %>% 
   rename("First Author" = first_author_last_name,
          "Title" = title,
          "Journal Field" = journal_field,
          "Algorithm Orientations" = Algorithm_orientations,
          "Task Objectivity" = task_objectivity,
-         "Human Comparison" = Type_of_human_manipulated) %>% 
+         "Human Comparison" = Type_of_human_manipulated,
+         "Theoretical Framework" = theory_framework) %>% 
   mutate(Method = str_to_title(Method)) %>% 
   kbl() %>% 
   kable_paper("striped")
